# RC_Retranslator

./: CMakeLists.txt  README.txt
App/: CMakeLists.txt  FreeRTOSConfig.h  Version.h  main.c  main.h
App/ScreenMgr/: ScreenMgr.c  ScreenMgr.h
App/SupervisorTask/: SupervisorTask.c  SupervisorTask.h
BSP/: BSP.h  CMakeLists.txt
BSP/BspDebug/: BspDebug.c  BspDebug.h
BSP/BspGpio/: BspGpio.c  BspGpio.h
BSP/BspServices/: BspServices.c  BspServices.h
BSP/BspSpiDispIli9341/: BspSpiDispIli9341.c  BspSpiDispIli9341.h
BSP/BspSystemClock/: BspSystemClock.c  BspSystemClock.h
HAL/: CMakeLists.txt
HAL/Src/: app_freertos.c  stm32g4xx_it.c
ImgSrc/: CMakeLists.txt  ImgSrc.h  ZsyIcon.c
Middleware/: CMakeLists.txt
Middleware/Display/: Display.c  Display.h
Middleware/Gui/: CMakeLists.txt  Gui.c  Gui.h
Middleware/Gui/Font/: CmakeLists.txt  Consolas24_Compress.c  Font.c  Font.h  Font16.c  Font20.c  Font24.c  Font24_Compress.c  Font24_mono.c  Font24_mono.xml  Font24_mono_1251.c  Font24_mono_1251.xml  Font24_mono_1251_Compress.c  Font24_mono_Compress.c  FontCompressor.py  Gui.h  consolas24.c  consolas24_1251.c  consolas24_1251.xml  consolas24_1251_Compress.c  main.c  main.cpp
Port/: CMakeLists.txt  PortDisplay.c  PortDisplay.h
Tools/lcd-image-converter/: font.tmpl  image_gui.tmpl
